--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-maillogd = "maillog.cli.maillogd:main"
-maillog-cli = "maillog.cli.maillog_cli:main"
+maillogd = "maillog.daemon:main"
+maillog-cli = "maillog.cli:main"
